--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -18,13 +18,10 @@
         android:orientation="vertical">
 
 
-        <TextView
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
-            android:text="@{info.title}"
-            android:textColor="#333333"
-            android:textSize="14dp" />
+            android:overScrollMode="never" />
     </LinearLayout>
 </layout>
